# pythonisms

./: README.md  decorators.py  iterations.py  linked_list_iterator.py  logs.txt  pyproject.toml  test_linked_list_interator.py
