[tool.poetry]
name = "pythonisms"
version = "0.1.0"
description = ""
authors = ["Kevin Henry <kevinhenry@mac.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
